Fix line length in renew_letsencrypt_cert.sh

--- a/letsencrypt/files/renew_letsencrypt_cert.sh.jinja
+++ b/letsencrypt/files/renew_letsencrypt_cert.sh.jinja
@@ -14,6 +14,8 @@ then
         --no-self-upgrade --non-interactive || exit 1
     cat /etc/letsencrypt/live/${COMMON_NAME}/fullchain.pem \
         /etc/letsencrypt/live/${COMMON_NAME}/privkey.pem \
-        > /etc/letsencrypt/live/${COMMON_NAME}/fullchain-privkey.pem || exit 1
-    chmod 600 /etc/letsencrypt/live/${COMMON_NAME}/fullchain-privkey.pem || exit 1
+        > /etc/letsencrypt/live/${COMMON_NAME}/fullchain-privkey.pem ||
+        exit 1
+    chmod 600 /etc/letsencrypt/live/${COMMON_NAME}/fullchain-privkey.pem ||
+        exit 1
 fi
